fix(server): close the five P1.3 auth findings (rate-limit spoofing, school scope, permission keys, reset status, enumeration)
Review of PR #31, same branch:

1. The sign-in rate limit keyed on `X-Forwarded-For[0]`, which the caller
   writes. `AuthController.clientIp` now uses `getRemoteAddr()` only, and
   `server.forward-headers-strategy` is `native` so Tomcat's RemoteIpValve
   resolves it to the rightmost hop it does not trust — the address Cloud Run's
   front end appends. `SignInRateLimiter` also gains a wider email-only bucket
   (5x the per-IP allowance) against a distributed spray; both buckets key on
   the normalised email.

2. `GET /admin/schools` and `/admin/schools/{id}` were not scoped: a Teacher
   read every school, join code included. `SchoolService` now checks the
   caller's `schoolId` explicitly (the Hibernate filter does not reach
   `findById`): the list holds only their school, another id is a 404.

3. `PreAuthorizeCoverageTest` only asked whether a key existed somewhere, so a
   swapped key passed. It now compares each annotation with
   `Permissions.find(method, path)` for that route, and requires a `permitAll`
   route's row to be one that grants PUBLIC.

4. `AuthService.setPassword` set `status = active`, so a reset link revived a
   disabled account and finished an invite. It writes the password only; a
   reset on an account that is not active is refused in the same words as a
   stale link, and `forgot-password` mails active accounts only.

5. Enumeration by timing: an unknown address is now checked against a dummy
   BCrypt hash, and invite/reset mail leaves through `OutgoingMail` — an
   `@Async` `@TransactionalEventListener(AFTER_COMMIT)` — so the 204 does not
   wait for the mailer and no transaction is held open across it.

Also from the review's non-blocking notes: accepting an invite requires status
`invited` and retires every other open link for that address; `UserService.list`
filters in the query (Specification) instead of `